# KGE

./: .gitignore  CMakeLists.txt
Assert/: test.cfg  test.xml
Assets/: test.cfg  test.json  test.txt  test.xml
Assets/AppStack/: player.mat  player.prefab  sky.mat  sky.png.tex  sky.prefab  ui_stack.prefab
Assets/AppTestMesh/: ground.mat  plane.prefab
Assets/AppTestUI/: ui.prefab
Assets/AppTestUI/texture/: ground.jpg.atlas  ground.jpg.tex
Assets/Assets/AppTestMesh/: ground.jpg.tex  ground.mat
Assets/shader/: Diffuse.shader.xml
Assets/shader/Include/: Texture.ps  Texture.vs  UI.vs
CMake/Modules/: common.cmake
app/: CMakeLists.txt  main.cpp  stack.cpp
lib/curl/android/: Android.mk
src/: CMakeLists.txt
src/core/: Application.cpp  Application.h  component.cpp  component.h  game_object.cpp  game_object.h  input.cpp  input.h  key_code.h  main_def.h  object.cpp  object.h  pre_define.h  resource.cpp  resource.h  transform.cpp  transform.h  world.cpp  world.h
src/graphics/: animation.cpp  animation.h  animation_clip.h  animation_curve.cpp  animation_curve.h  animation_state.h  animation_wrap_mode.h  buffer_GLES.cpp  buffer_GLES.h  buffer_type.h  camera.cpp  camera.h  camera_clear_flag.h  color.cpp  color.h  common.cpp  common.h  depth_buffer.h  display.cpp  display.h  display_GLES.cpp  display_GLES.h  display_base.cpp  display_base.h  display_win.cpp  display_win.h  filter_mode.h  frame_buffer.cpp  frame_buffer.h  graphics.cpp  graphics.h  image.cpp  image.h  index_buffer.cpp  index_buffer.h  layer.h  light.cpp  light.h  material.cpp  material.h  (+36 more)
src/io/: CMakeLists.txt  content.cpp  content.h  data_stream.cpp  data_stream.h  file_tool.cpp  file_tool.h  file_tool_imp.cpp  file_tool_imp.h  json_rapidjson.cpp  json_rapidjson.h  memory_stream.cpp  memory_stream.h  quick_file_reader.cpp  quick_file_reader.h  quick_file_writer.hpp  section.cpp  section.h  section_factory.cpp  section_factory.h  stream.cpp  stream.h  xml_rapidxml.cpp  xml_rapidxml.h
src/math/: _math.hpp  aabb.cpp  aabb.h  bounds.cpp  bounds.h  frustum.cpp  frustum.h  line.cpp  line.h  math_def.h  matrix.cpp  matrix.hpp  matrix.ipp  plane.cpp  plane.h  polygon.cpp  polygon.h  quat.cpp  quat.hpp  quat.ipp  rect.cpp  rect.h  triangle.cpp  triangle.h  vector2.cpp  vector2.hpp  vector2.ipp  vector3.cpp  vector3.hpp  vector3.ipp  vector4.cpp  vector4.hpp  vector4.ipp
src/rapidjson/: document.h
src/rapidxml/: rapidxml_print.hpp  rapidxml_utils.hpp
src/ui/: font.cpp  font.h  sprite.cpp  sprite.h  sprite_group.cpp  sprite_group.h  ui_canvas_renderer.cpp  ui_canvas_renderer.h  ui_event_handler.cpp  ui_event_handler.h  ui_image.cpp  ui_image.h  ui_label.cpp  ui_label.h  ui_rect.cpp  ui_rect.h  ui_view.cpp  ui_view.h
src/util/: any.h  byte_buffer.cpp  byte_buffer.h  encode.cpp  encode.h  log.cpp  log.h  singleton.h  string_tool.cpp  string_tool.h  task_loop.cpp  task_loop.h  thread.cpp  thread.h  time.cpp  time.h
src/zlib/: deflate.c  trees.c  zutil.c  zutil.h
unity/: unity.CSharp.Editor.csproj  unity.sln
unity/Assets/AppStack/: player.mat  scene.unity  sky.mat
unity/Assets/AppTestMesh/: AppTestMesh.unity  Plane.prefab  ground.mat
unity/Assets/AppTestUI/: Canvas.prefab  scene.unity
unity/Assets/script/editor/KGE/: exporter.cs  exporter_base.cs  exporter_mesh.cs  exporter_ui.cs
unity/Assets/shader/: Color.shader.shader  Diffuse.shader
unity/Assets/shader/SkinnedMesh/: Diffuse.shader
unity/ProjectSettings/: ProjectSettings.asset
