
PROJECT (app)

AUX_SOURCE_DIRECTORY(. DIR_SRCS)

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/../src )

ADD_EXECUTABLE(app ${DIR_SRCS})

TARGET_LINK_LIBRARIES(app opengl32 kge)

IF (WIN32) 
	SET_TARGET_PROPERTIES (app PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:windows") 
	SET_TARGET_PROPERTIES (app PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:windows") 
	SET_TARGET_PROPERTIES (app PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:windows") 
	SET_TARGET_PROPERTIES (app PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:windows")
ENDIF (WIN32)

